--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -1,10 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>$Title$</title>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Document</title>
 </head>
-<body>
-$END$
-</body>
+ <body>
+    <p>Guess 4 numbers. Enter them separated with spaces:</p>
+    <form action="" method="POST">
+        {% csrf_token %}
+        <div class="field"><label><input type="text" name="nums"></label>
+            <label><input type="submit" value="Send"/></label></div><br>
+    </form>
+    <h2> Result: {{result}} </h2>
+ </body>
 </html>
