Добавил history.html

--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -15,5 +15,6 @@
             <label><input type="submit" value="Send"/></label></div><br>
     </form>
     <h2> Result: {{result}} </h2>
+    <p><a href="history/">History of Game</a></p>
  </body>
 </html>
