--- a/source/webapp/templates/index.html
+++ b/source/webapp/templates/index.html
@@ -7,14 +7,17 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
- <body>
-    <p>Guess 4 numbers. Enter them separated with spaces:</p>
-    <form action="" method="POST">
-        {% csrf_token %}
-        <div class="field"><label><input type="text" name="nums"></label>
-            <label><input type="submit" value="Send"/></label></div><br>
-    </form>
-    <h2> Result: {{result}} </h2>
-    <p><a href="history/">History of Game</a></p>
- </body>
+<body>
+<p>Guess 4 numbers. Enter them separated with spaces:</p>
+<form action="" method="POST">
+    {% csrf_token %}
+    <div class="field"><label><input type="text" name="nums"></label>
+        <label><input type="submit" value="Send"/></label></div>
+    <br>
+</form>
+{% if result %}
+    <h2> {{ result }} </h2>
+{% endif %}
+<p><a href="/history">History of Game</a></p>
+</body>
 </html>
